[package]
name = "spright"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.1.0"
image = { version = "0.25.2", default-features = false }
bytemuck = { version = "1.16", features = ["derive"] }

[dev-dependencies]
winit = "0.30"
pollster = "0.3.0"
image = { version = "0.25.2", default-features = false, features = ["png"] }
