[package]
name = "spright"
version = "0.16.0"
edition = "2021"
description = "Simple sprite renderer for wgpu"
license = "LGPL-3.0-or-later"
repository = "https://github.com/teenygame/spright"

[dependencies]
wgpu = "23.0.1"
bytemuck = { version = "1.16", features = ["derive"] }
rgb = "0.8.50"
encase = { version = "0.10.0", features = ["glam"] }
glam = "0.29.0"
itertools = "0.13.0"

[dev-dependencies]
winit = "0.30"
pollster = "0.3.0"
image = { version = "0.25.2", default-features = false, features = ["png"] }
